--- a/pryTP3LaboratorioProgramacionIII/pryTP3LaboratorioProgramacionIII/Properties/Settings.settings
+++ b/pryTP3LaboratorioProgramacionIII/pryTP3LaboratorioProgramacionIII/Properties/Settings.settings
@@ -1,7 +1,9 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)">
-  <Profiles>
-    <Profile Name="(Default)" />
-  </Profiles>
-  <Settings />
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="pryTP3LaboratorioProgramacionIII.Properties" GeneratedClassName="Settings">
+  <Profiles />
+  <Settings>
+    <Setting Name="Cadena" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">provider=microsoft.jet.oledb.4.0;data source=TP.mdb</Value>
+    </Setting>
+  </Settings>
 </SettingsFile>
